--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="AngelaYu.JPG" alt="Angela's profile Picture"></td>
+      <td><img src="images/AngelaYu.JPG" alt="Angela's profile Picture"></td>
       <td><h1>Angela Yu</h1>
       <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The App Brewary</a></strong></em></p>
       <p>I am an App and Web Developver and I ❤ coffee and brew my own beers!</p></td>
